--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 img {
     height: 200px
 }
+
+body {
+    background-color: cornflowerblue;
+}
+
+footer {
+    background-color: darkblue;
+}
+
+head {
+    background-color: blueviolet;
+}
