--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@ img {
 
 body {
     background-color: cornflowerblue;
+    color: darkblue;
 }
 
 footer {
     background-color: darkblue;
+    color: aliceblue;
 }
 
 head {
